# jelly

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml  temp.cbor
.github/workflows/: rust.yml
ratatui_widget_scrolling/: Cargo.toml  README.md
ratatui_widget_scrolling/src/: lib.rs
roto_commands/: Hello.roto  Test.roto
src/: events.rs  hardware.rs  main.rs  network.rs  slipmux.rs  transport.rs  tui.rs  tui2.rs
src/app/: coap_log.rs  commands.rs  datatypes.rs  handler.rs  mod.rs  tui.rs  tui3.rs  user_input_manager.rs
src/command/: library.rs  mod.rs
src/command/commands/: asynch.rs  coap_get_template.rs  force_cmds_available.rs  help.rs  ifconfig_wrapper.rs  mem.rs  mem_read.rs  mod.rs  multi_endpoints_sample.rs  ps.rs  roto_template.rs  sample.rs  saul.rs  spider.rs  wkc.rs  write.rs
src/commands/: button_led.rs  cmds.rs  coap_get_template.rs  mem.rs  mod.rs  multi_endpoints_sample.rs  sample.rs  saul.rs  wks.rs
src/datatypes/: coap_log.rs  diagnostic_log.rs  job_log.rs  log.rs  mod.rs  packet_log.rs  text_log.rs  user_input_manager.rs
src/headless/: configuration.rs  diagnostic.rs  diagnostic_network.rs  mod.rs  network.rs
src/tests/: basic.rs  logs.rs  mod.rs  tab_handling.rs  user_input.rs
src/tui/: color.rs  help.txt  logline_highlight.rs  logline_state.rs  logline_table.rs  mod.rs  render.rs  scrolling.rs  ui_state.rs
widget_scrolling/: Cargo.toml
widget_scrolling/src/: lib.rs
