[package]
name = "Jelly"
description = "A tool to interact with a shell via Slipmux"
version = "0.1.0"
edition = "2021"
authors = ["Bennet Hattesen <bennet.hattesen@haw-hamburg.de>"]
rust-version = "1.89"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
let_underscore_untyped = "warn"
str_to_string = "warn"

cast_possible_truncation = "allow"
option-if-let-else = "allow"
single_match_else = "allow"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
cbor-edn = { version = "0.0.9", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
coap-lite = { version = "0.13", default-features = false }
coap-message = "0.3.6"
crossterm = { version = "0.29", default-features = false, features = ["events"]}
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
minicbor = "2"
# This disables the libudev-sys dependencies, making auto enumeration unavailable
serialport = { version = "4", default-features = false }
slipmux = "0.3.2"
tui-widgets = { version = "0.4", default-features = false, features = ["scrollview"] }
smol = "2.0.2"
futures-lite = "2.6.1"
async-channel = "2.5.0"
eyre = "0.6.12"
url = "2.5.7"
