[package]
authors = ["Bennet Hattesen <bennet.hattesen@haw-hamburg.de>"]
categories = ["command-line-utilities"]
description = "A tool to interact with a shell via Slipmux"
edition = "2024"
homepage = "https://github.com/teufelchen1/jelly"
keywords = ["slip", "serial", "coap", "shell"]

license = "MIT OR Apache-2.0"
name = "Jelly"
readme = "README.md"
repository = "https://github.com/teufelchen1/jelly"
rust-version = "1.89"
version = "0.1.0"

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
let_underscore_untyped = "warn"
str_to_string = "warn"

cast_possible_truncation = "allow"
option-if-let-else = "allow"
single_match_else = "allow"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
cbor-edn = { version = "0.0.9", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive"] }
coap-lite = { version = "0.13", default-features = false }
coap-message = "0.3.6"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
minicbor = "2"
# This disables the libudev-sys dependencies, making auto enumeration unavailable
serialport = { version = "4", default-features = false }
slipmux = "0.3.2"
terminal-colorsaurus = { version = "1.0.3", default-features = false }
tui-widgets = { version = "0.4", default-features = false, features = ["scrollview"] }
tun-rs = { version = "2", features = ["interruptible"] }
pnet_packet = { version = "0.35", default-features = false }
